crates/toml/tests/snapshots/invalid/string/bad-uni-esc-02.stderr
TOML parse error at line 1, column 23
  |
1 | bad-uni-esc-2 = "val\Ux"
  |                       ^
too few unicode value digits, expected unicode hexadecimal value
